lang/tests/compile_fail/duplicate_seeds_attr.stderr
error: duplicate #[seeds(...)] attribute
 --> tests/compile_fail/duplicate_seeds_attr.rs:7:1
  |
7 | #[seeds(b"second")]
  | ^^^^^^^^^^^^^^^^^^^
